--- a/src/app/mnu/settings/settings.component.html
+++ b/src/app/mnu/settings/settings.component.html
@@ -1,1 +1,26 @@
 <app-header [title]="'Setting'"></app-header>
+
+<ion-content>
+    <ion-item lines="none">
+        <ion-label>Security</ion-label>
+    </ion-item>
+    <ion-item lines="none">
+        <ion-img slot="start" src="/assets/images/password.png"></ion-img>
+        <ion-label >Change password</ion-label>
+        <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
+    </ion-item>
+
+    <ion-item lines="none">
+        <ion-label>Account Settings</ion-label>
+    </ion-item>
+    <ion-item lines="none">
+        <ion-img slot="start" src="/assets/images/account.png"></ion-img>
+        <ion-label >Edit Profile</ion-label>
+        <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
+    </ion-item>
+    <ion-item lines="none" (click)="onBtnLogoutClicked()">
+        <ion-img slot="start" src="/assets/images/logout.png"></ion-img>
+        <ion-label >Logout</ion-label>
+        <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
+    </ion-item>
+</ion-content>
