--- a/src/app/aut/language/language.component.html
+++ b/src/app/aut/language/language.component.html
@@ -26,7 +26,7 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-button (click)="onNextClick()" expand="block" shape="round">
+    <ion-button color="warning" (click)="onNextClick()" expand="block" shape="round">
       Next
     </ion-button>
   </ion-toolbar>
