--- a/src/app/mnu/my-account/my-account.component.html
+++ b/src/app/mnu/my-account/my-account.component.html
@@ -1,1 +1,76 @@
 <app-header [title]="'My Account'"></app-header>
+
+<ion-content>
+    <ion-card>
+        <ion-card-header>
+            <ion-avatar class="round" *ngIf="!userInfo?.profileImgUrl" >
+                <ion-label class="avatar">{{profileAvataAsLetter}}</ion-label>
+              </ion-avatar>
+            <ion-card-subtitle>Username</ion-card-subtitle>
+            <!-- <ion-card-title>{{username}}</ion-card-title> -->
+            <ion-card-title>Sokleang</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+            Joined online ticked reservation since <br>19 May 2020
+        </ion-card-content>
+    </ion-card>
+
+    <ion-item lines="none">
+        <ion-label>Your progress: <span style="background-color: #FFC513; padding: 20px; color: red;">{{progress}}/25</span></ion-label>
+    </ion-item>
+    <ion-item lines="none">
+        <ion-range min="0" max="25" color="warning" [value]="progress">
+          <ion-label slot="start">0</ion-label>
+          <ion-label slot="end">25</ion-label>
+        </ion-range>
+    </ion-item>
+    <ion-item lines="none">
+        <ion-row style="width: 100%; padding: 10px;">
+            <ion-col size="8">
+                <ion-label>Casual Traveler</ion-label>
+            </ion-col>
+            <ion-col size="4" style="width: 100%;">
+                <ion-label>Wanderer</ion-label>
+            </ion-col>
+        </ion-row>
+    </ion-item>
+
+    <ion-card>
+        <ion-card-header>
+            <ion-card-subtitle>Casual Traveler</ion-card-subtitle>
+            <!-- <ion-card-title>Sokleang</ion-card-title> -->
+        </ion-card-header>
+        <ion-card-content>
+            <ion-row>
+                <ion-col size="4">
+                    <ion-row>
+                        <ion-img src="/assets/images/money.png" ></ion-img>
+                    </ion-row>
+                    <ion-row>
+                        <ion-label style="font-size: 14px;">Earn 10x Points</ion-label>
+                    </ion-row>
+                </ion-col>
+                <ion-col size="4">
+                    <ion-row>
+                        <ion-img src="/assets/images/gift.png" ></ion-img>
+                    </ion-row>
+                    <ion-row>
+                        <ion-label style="font-size: 14px;">Reward Redemption</ion-label>
+                    </ion-row>
+                </ion-col>
+                <ion-col size="4">
+                    <ion-row>
+                        <ion-img src="/assets/images/shout.png" ></ion-img>
+                    </ion-row>
+                    <ion-row>
+                        <ion-label style="font-size: 14px;">Enjoy Special Promotion</ion-label>
+                    </ion-row>
+                </ion-col>
+                
+            </ion-row>
+            <ion-button color="warning" expand="block" fill="clear" shape="round" slot="end">
+                Seel all >
+            </ion-button>
+        </ion-card-content>
+    </ion-card>
+</ion-content>
