--- a/src/app/shared/components/ticket-filters/ticket-filters.component.html
+++ b/src/app/shared/components/ticket-filters/ticket-filters.component.html
@@ -1,13 +1,13 @@
 <ion-grid style="margin-top: 20px;">
   <ion-row class="ion-align-items-center">
       <ion-col size="5">
-          <ion-button style="width: 140px; height: 80px;" size="large" color="warning" (click)="onClick()" expand="block">PP</ion-button>
+          <ion-button style="width: 140px; height: 80px;" size="large" color="warning" (click)="onBtnFromClicked()" expand="block">PP</ion-button>
       </ion-col>
       <ion-col size="2">
           <ion-icon name="repeat-outline"></ion-icon>
       </ion-col>
       <ion-col size="5">
-          <ion-button style="width: 140px; height: 80px;" size="large" color="warning" (click)="onClick()" expand="block">NN</ion-button>
+          <ion-button style="width: 140px; height: 80px;" size="large" color="warning" (click)="onBtnToClicked()" expand="block">NN</ion-button>
       </ion-col>
   </ion-row>
   <ion-row style="margin-top: 20px;">
